--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,12 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+## Project specific data
+.gitignore
+# Live configuration
+MsSqlDataToText.xml
+# Test data
+MsSqlDataToText/DATA/*
+# Timetracker
+MsSqlDataToText.dt
