--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,6 @@ MsSqlDataToText.xml
 MsSqlDataToText/DATA/*
 # Timetracker
 MsSqlDataToText.dt
+Devtracker.Dump
+MsSqlDataToText/RunIt.cmd
+MsSqlDataToText/TestIt.cmd
