Updated .NET framework to 4.8 and NLog to v5.4.0.3182.

--- a/.gitignore
+++ b/.gitignore
@@ -267,7 +267,6 @@ MsSqlDataToText.xml
 # Test data
 MsSqlDataToText/DATA/*
 # Timetracker
-MsSqlDataToText.dt
-Devtracker.Dump
 MsSqlDataToText/RunIt.cmd
 MsSqlDataToText/TestIt.cmd
+libMsSqlDataToText/*
